<resources>
    <string name="app_name">RememberIt</string>
    <string name="label_classroom_word">word:</string>
    <string name="label_classroom_definition">definition:</string>
    <string name="label_classroom_example">example:</string>
    <string name="label_office_subject">Current subject: </string>
    <string name="label_fragment_user_info_subject">Subject:\u0020\u0020</string>
    <string name="label_fragment_user_info_user">User:\u0020\u0020</string>

    <string name="edit_message">Type in a word to save.</string>
    <string name="edit_example_spinner_prompt">Difficulty:</string>
    <string name="button_save">Save</string>
    <string name="button_save_and_proceed">Add definition</string>
    <string name="button_edit_definition_find_new">Find</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">Saved word</string>
    <string name="title_action_button_random_choice">Pick randomly</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_view_all_words">View</string>
    <string name="button_view_all_definitions">View</string>
    <string name="button_view_definitions_view_examples">Examples</string>
    <string name="button_view_definitions_edit_definition">Edit</string>
    <string name="button_view_words_edit_word">Edit</string>
    <string name="button_view_words_delete_word">Delete</string>
    <string name="title_activity_display_words">DisplayWords</string>
    <string name="title_activity_display_definitions">Definition</string>
    <string name="title_activity_definitions_menu">DefinitionsMenu</string>
    <string name="button_add_definition">Add</string>
    <string name="button_open_definitions_menu">Definitions</string>
    <string name="button_open_words_menu">Words</string>
    <string name="button_view_examples_add_example">Add\nexample</string>
    <string name="button_edit_example_save_example">Save</string>
    <string name="button_view_examples_edit">Edit</string>
    <string name="button_edit_example_dependent_definitions">Unlink</string>
    <string name="button_edit_definition_dependent_examples">Unlink</string>
    <string name="button_enter_classroom">Classroom</string>
    <string name="button_lesson_complete_show_progress">Progress</string>
    <string name="button_lesson_complete_exit">Exit</string>
    <string name="button_office_setup_user">User</string>
    <string name="button_enter_office">Office</string>
    <string name="button_enter_school">School</string>
    <string name="button_user_menu_new">New</string>
    <string name="button_user_menu_select">Select</string>
    <string name="button_user_menu_edit">Edit</string>
    <string name="button_create_user_save">Save</string>
    <string name="button_create_user_cancel">Cancel</string>
    <string name="hint_add_words_word">Word</string>
    <string name="hint_add_words_language">Language</string>
    <string name="hint_add_definition_definition">Definition</string>
    <string name="hint_add_definition_word">Word</string>
    <string name="hint_add_definition_part_of_speech">Part of speech</string>
    <string name="hint_add_definition_register">Definition register</string>
    <string name="hint_add_definition_usability">Definition usability (1 or 2)</string>
    <string name="hint_edit_example_example">Example</string>
    <string name="hint_create_user_name">Name</string>
    <string name="key_word_passed">1</string>
    <string name="key_def_passed">2</string>
    <string name="key_def_id_passed">3</string>
    <string name="key_example_id_passed">4</string>
    <string name="key_example_passed">5</string>
    <string name="key_def_id_passed_to_unlink">6</string>
    <string name="key_example_difficulty_passed">7</string>
    <string name="key_example_id_passed_to_unlink">8</string>
    <string name="key_def_id_edited">9</string>
    <string name="key_register_passed_to_edit_definition">10</string>
    <string name="key_usability_passed_to_edit_definition">11</string>
    <string name="key_pOfSp_passed_to_edit_definition">12</string>
    <string name="key_word_id_passed">13</string>
    <string name="key_language_passed">14</string>
    <string name="label_difficulty">Difficulty: </string>
    <string name="title_activity_add_definition">AddDefinition</string>
    <string name="title_activity_words_menu">WordsMenuActivity</string>
    <string name="title_activity_definitions_display">DefinitionsDisplayActivity</string>
    <string name="title_activity_definitions_add">DefinitionsAddActivity</string>
    <string name="title_activity_words_display">WordsDisplayActivity</string>
    <string name="title_activity_words_add">WordsAddActivity</string>
    <string name="title_activity_examples_menu">ExamplesMenuActivity</string>
    <string name="title_activity_view_examples">ViewExamplesActivity</string>
    <string name="title_activity_edit_example">EditExampleActivity</string>

    <string name="button_classroom_easy">Super!</string>
    <string name="button_classroom_medium">So-so</string>
    <string name="button_classroom_hard">Hardly</string>
    <string name="button_classroom_show_answer">Show answer</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Legendary</item>
    </string-array>
    <string-array name="parts_of_speech">
        <item>Noun</item>
        <item>Verb</item>
        <item>Adjective</item>
        <item>Adverb</item>
        <item>Pronoun</item>
        <item>Conjunction</item>
        <item>Preposition</item>
        <item>Interjection</item>
    </string-array>
    <string-array name="language">
        <item>en</item>
        <item>de</item>
        <item>ru</item>
        <item>es</item>
        <item>it</item>
        <item>fr</item>
        <item>ja</item>
        <item>cs</item>
        <item>zh</item>
    </string-array>
    <string name="title_activity_class_room">Classroom</string>
    <string name="title_activity_school">School</string>
    <string name="title_activity_office">Office</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="title_activity_words">Words</string>
    <string name="title_activity_edit_words">Edit word</string>
    <string name="new_word">New word</string>
    <string name="new_definition">New definition</string>
    <string name="show_all_definitions">Show all</string>
    <string name="title_activity_definitions">Definitions</string>
    <string name="title_activity_edit_definition">Edit definition</string>
    <string name="show_all">Show all</string>
    <string name="show_with_no_examples">Without examples</string>
    <string name="title_activity_examples">Examples</string>
    <string name="new_example">New example</string>
    <string name="title_activity_edit_user">User</string>
    <string name="button_eidt_user_update">Update current</string>
    <string name="button_edit_user_save">Add new</string>
    <string name="title_activity_classroom">Classroom</string>
</resources>
