<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_text_create_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_create_user_name"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_edit_user_new"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:text="@string/button_edit_user_save"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/edit_text_create_user_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_edit_user_update"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:text="@string/button_eidt_user_update"
        android:layout_alignTop="@+id/button_edit_user_new"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>