<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_classroom_word"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:background="@color/background_classroom_word"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/label_classroom_word"
        android:layout_alignLeft="@+id/button_classroom_easy"
        android:layout_alignStart="@+id/button_classroom_easy" />

    <TextView
        android:id="@+id/text_classroom_definition"
        android:layout_width="800dp"
        android:layout_height="250dp"
        android:background="@color/background_classroom_definition"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:layout_below="@+id/label_classroom_definition"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text_classroom_example"
        android:layout_width="800dp"
        android:layout_height="250dp"
        android:background="@color/background_classroom_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:layout_below="@+id/label_classroom_example"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_classroom_easy"
        android:onClick="saveAsEasy"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_classroom_easy"
        android:background="@color/button_background_classroom_easy"
        android:textColor="@color/button_text_classroom_easy"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/label_classroom_definition"
        android:layout_toEndOf="@+id/label_classroom_definition" />

    <Button
        android:id="@+id/button_classroom_medium"
        android:onClick="saveAsMedium"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_classroom_medium"
        android:background="@color/button_background_classroom_medium"
        android:textColor="@color/button_text_classroom_medium"
        android:layout_alignTop="@+id/button_classroom_easy"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_classroom_hard"
        android:onClick="saveAsHard"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_classroom_hard"
        android:background="@color/button_background_classroom_hard"
        android:textColor="@color/button_text_classroom_hard"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_classroom_medium"
        android:layout_toEndOf="@+id/button_classroom_medium"
        android:layout_marginLeft="94dp"
        android:layout_marginStart="94dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_classroom_word"
        android:id="@+id/label_classroom_word"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_classroom_definition"
        android:id="@+id/label_classroom_definition"
        android:layout_below="@+id/text_classroom_word"
        android:layout_marginTop="6dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_classroom_example"
        android:id="@+id/label_classroom_example"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/text_classroom_definition"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_classroom_show_answer"
        android:onClick="showAnswer"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/button_classroom_show_answer"
        android:layout_below="@+id/text_classroom_example"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>